# dongju-industry-backend

./: .gitignore  .pre-commit-config.yaml  appspec.yml  pyproject.toml
.circleci/: config.yml
scripts/: deploy  deploy_source  start_server  stop_server
src/: main.py
src/api/: __init__.py  admin.py  certification.py  delivery.py  file.py  history.py  inquiry.py  notice.py  search.py  user.py
src/core/: app_config.py  config.py
src/crud/: __init__.py  admin.py  base.py  certification.py  delivery.py  file.py  history.py  inquiry.py  notice.py  search.py
src/schema/: __init__.py  crud.py  crud_base.py  response_base.py
src/schema/admin/: __init__.py  crud.py
src/schema/certification/: __init__.py  crud.py
src/schema/certification/response_example/: __init__.py  get_by_id.py  get_multi.py
src/schema/delievery/: __init__.py  crud.py
src/schema/delivery/: __init__.py  crud.py
src/schema/delivery/response_example/: __init__.py  create.py  get_multi.py
src/schema/file/: __init__.py
src/schema/file/response_example/: __init__.py  get_by_name.py
src/schema/history/: __init__.py  crud.py
src/schema/history/response_example/: __init__.py  create.py  get_multi.py
src/schema/inquiry/: __init__.py  crud.py
src/schema/inquiry/response_example/: create.py  get_by_id.py  get_multi.py
src/schema/notice/: __init__.py  crud.py
src/schema/notice/response_example/: __init__.py  get_by_id.py  get_multi.py
src/schema/response_example/: __init__.py  create.py  delete.py  update.py
src/schema/search/: __init__.py  crud.py
src/schema/search/response_example/: __init__.py  get_multi.py
src/schema/user/: crud.py
src/util/: __init__.py  contact.py  file.py  parser.py
