[tool.poetry]
name = "dongju-industry-backend"
version = "0"
description = "[ 동주 산업 ] 웹 서비스 백엔드"
authors = ["H4MMER.studio <leddobby@weekwith.me>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
sentry-sdk = "^1.4.3"
strawberry-graphql = {extras = ["fastapi"], version = "^0.85.1"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
