[tool.poetry]
name = "dongju-industry-backend"
version = "0"
description = "[ 동주 산업 ] 웹 서비스 백엔드"
authors = ["H4MMER.studio <leddobby@weekwith.me>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
strawberry-graphql = {extras = ["fastapi"], version = "^0.85.1"}
motor = "^2.5.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.1.0"
pre-commit = "^2.17.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
